Revision history for OpenTelemetry

{{$NEXT}}

0.024     2024-10-11 18:36:41+01:00 Europe/London

    * Expand test coverage and documentation for logging code

0.023001  2024-09-28 14:48:24+01:00 Europe/London (TRIAL RELEASE)

    * Updated the documentation to remove remaining mentions of the
      span's 'add_link' method, which was removed to comply with the
      specification
    * Add experimental support for logs

0.023     2024-06-03 10:31:57+01:00 Europe/London

    * Fixed an issue with experimental cleanup where "DBI::db::execute"
      was replaced with "DBI::db::do" by mistake (GH #17)
    * Fixed an issue with the versioning of the OpenTelemetry::Baggage
      module, which has been reporting the same version number since
      0.010. (GH #18)

0.022     2024-05-12 20:08:13+01:00 Europe/London

    * Fixed a minor rendering issue in the documentation of the HTTP
      integrations, and added a "See Also" section to both.

0.021     2024-05-10 19:21:15+01:00 Europe/London

    * Leave the status of a span unset on success responses in the
      HTTP::Tiny and LWP::UserAgent integrations. This behaviour matches
      the OpenTelemetry specification.
    * Fixed an issue in the HTTP::Tiny integration where the content size
      of requests with a content callback was incorrectly reported. It is
      now not reported at all.
    * Expand and update documentation of HTTP integrations.

0.020     2024-04-25 18:54:56+01:00 Europe/London

    * Switch LWP::UserAgent integration to wrap around that module's
      'simple_request' method instead of its 'request' method. This
      should catch some more cases, and fix GH #13.
    * Added a minimal example application. See the `examples` directory
      in the distribution files.

0.019     2023-12-03 14:44:05+00:00 Europe/London

    * Document OpenTelemetry->logger as deprecated, as this will soon
      be removed to make room for the implementation of the Logs API.